@@ -33,6 +33,7 @@
 
 2018-XX-XX Type-Tiny version 1.004000 released!
 
+ - Types::Standard::FileHandle has a looser definition.
  - Type::Params now has `compile_named_oo`.
  - Type::Params supports defaults for missing parameters.
  - Various bug fixes.
